--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "lesson_13-be",
+  "name": "backend",
   "version": "1.0.0",
-  "description": "techNotes MERN Project",
+  "description": "techtasks project",
   "main": "server.js",
   "scripts": {
     "start": "node server",
